force-app/main/default/objects/IT_Edenred_Document__c/fields/IT_Accepted__c.field-meta.xml
<CustomField>
    <fullName>IT_Accepted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Accepted</label>
    <type>Checkbox</type>
</CustomField>