force-app/main/default/objects/IT_Edenred_Document__c/fields/IT_Billing_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>IT_Billing_Company_Name__c</fullName>
    <formula>IT_Financial_Center__r.ER_Account_Name__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing Company Name</label>
    <type>Text</type>
</CustomField>