force-app/main/default/objects/IT_Edenred_Document__c/fields/IT_Case__c.field-meta.xml
<CustomField>
    <fullName>IT_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Documenti Richiesti</relationshipLabel>
    <relationshipName>Documents</relationshipName>
    <type>Lookup</type>
</CustomField>