force-app/main/default/objects/IT_Edenred_Document__c/fields/IT_CIG__c.field-meta.xml
<CustomField>
    <fullName>IT_CIG__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CIG</label>
    <type>Checkbox</type>
</CustomField>