force-app/main/default/objects/IT_Edenred_Document__c/fields/IT_Discharge_already_carried_out__c.field-meta.xml
<CustomField>
    <fullName>IT_Discharge_already_carried_out__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Discharge already carried out</label>
    <type>Checkbox</type>
</CustomField>