force-app/main/default/objects/IT_Edenred_Document__c/fields/IT_Document_In_Out__c.field-meta.xml
<CustomField>
    <fullName>IT_Document_In_Out__c</fullName>
    <formula>CASE(TEXT( IT_Document_Origin__c ),
&quot;In&quot;, &#39;               &#39;+IMAGE(&quot;/resource/1580719457000/InFinance&quot;,&quot;In&quot;,18,18) ,
&quot;Out&quot;, IMAGE(&quot;/resource/1580719429000/OutFinance?&quot;,&quot;Out&quot;,18,18),
&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Document In/Out</label>
    <type>Text</type>
</CustomField>