force-app/main/default/objects/IT_Edenred_Document__c/fields/IT_Document_Number__c.field-meta.xml
<CustomField>
    <fullName>IT_Document_Number__c</fullName>
    <label>Document Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>