force-app/main/default/objects/IT_Edenred_Document__c/fields/IT_Document_Origin__c.field-meta.xml
<CustomField>
    <fullName>IT_Document_Origin__c</fullName>
    <label>Document Origin</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In</fullName>
            </value>
            <value>
                <fullName>Out</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>