force-app/main/default/objects/IT_Edenred_Document__c/fields/IT_Document_OUT__c.field-meta.xml
<CustomField>
    <fullName>IT_Document_OUT__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Document OUT</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Documenti Prodotti</relationshipLabel>
    <relationshipName>Documents1</relationshipName>
    <type>Lookup</type>
</CustomField>