force-app/main/default/objects/IT_Edenred_Document__c/fields/IT_IPA__c.field-meta.xml
<CustomField>
    <fullName>IT_IPA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IPA</label>
    <type>Checkbox</type>
</CustomField>