force-app/main/default/objects/IT_Edenred_Document__c/fields/IT_Is_Last_Version__c.field-meta.xml
<CustomField>
    <fullName>IT_Is_Last_Version__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Last Version</label>
    <type>Checkbox</type>
</CustomField>