force-app/main/default/objects/IT_Edenred_Document__c/fields/IT_Latest_Version__c.field-meta.xml
<CustomField>
    <fullName>IT_Latest_Version__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Latest Version</label>
    <referenceTo>IT_Edenred_Document__c</referenceTo>
    <relationshipLabel>Previous Versions</relationshipLabel>
    <relationshipName>Documents</relationshipName>
    <type>Lookup</type>
</CustomField>