force-app/main/default/objects/IT_Edenred_Document__c/fields/IT_NO_Electronic_invoicing__c.field-meta.xml
<CustomField>
    <fullName>IT_NO_Electronic_invoicing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NO Electronic invoicing</label>
    <type>Checkbox</type>
</CustomField>