force-app/main/default/objects/IT_Edenred_Document__c/fields/IT_Notes__c.field-meta.xml
<CustomField>
    <fullName>IT_Notes__c</fullName>
    <label>Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>