force-app/main/default/objects/IT_Edenred_Document__c/fields/IT_Operation_Type__c.field-meta.xml
<CustomField>
    <fullName>IT_Operation_Type__c</fullName>
    <label>Operation Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Elimination Total</fullName>
            </value>
            <value>
                <fullName>Partial Reversal</fullName>
            </value>
            <value>
                <fullName>Cancellation and Re-issue</fullName>
            </value>
            <value>
                <fullName>Document SOLA VAT</fullName>
            </value>
            <value>
                <fullName>NDIM</fullName>
            </value>
            <value>
                <fullName>Only Issue Invoice (eg. Invoice no fat)</fullName>
            </value>
            <value>
                <fullName>Only Issue Credit Note (eg. For difference discount)</fullName>
            </value>
            <value>
                <fullName>Note Refund Credit Ticket</fullName>
            </value>
            <value>
                <fullName>Note Repayment Credit Welfare</fullName>
            </value>
            <value>
                <fullName>Note Repayment Credit UTA</fullName>
            </value>
            <value>
                <fullName>Note Repayment Credit Edenred ITALY FIN</fullName>
            </value>
            <value>
                <fullName>Deposit Refund</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>