force-app/main/default/objects/IT_Edenred_Document__c/fields/IT_Operation_Type_Out__c.field-meta.xml
<CustomField>
    <fullName>IT_Operation_Type_Out__c</fullName>
    <label>Operation Type Out</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fattura</fullName>
            </value>
            <value>
                <fullName>Nota Credito</fullName>
            </value>
            <value>
                <fullName>Nota Debito</fullName>
            </value>
            <value>
                <fullName>NDIM (Interessi di Mora)</fullName>
            </value>
            <value>
                <fullName>Documento Sola IVA</fullName>
            </value>
            <value>
                <fullName>Autofattura</fullName>
            </value>
            <value>
                <fullName>FCI (Fuori Campo IVA)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>