force-app/main/default/objects/IT_Edenred_Document__c/fields/IT_Recieved_Date__c.field-meta.xml
<CustomField>
    <fullName>IT_Recieved_Date__c</fullName>
    <label>Recieved Date</label>
    <type>Date</type>
</CustomField>