force-app/main/default/objects/IT_Edenred_Document__c/fields/IT_Record_Link__c.field-meta.xml
<CustomField>
    <fullName>IT_Record_Link__c</fullName>
    <formula>&#39;/lightning/r/IT_Edenred_Document__c/&#39; + Id + &#39;/view&#39;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Record Link</label>
    <type>Text</type>
</CustomField>