force-app/main/default/objects/IT_Edenred_Document__c/fields/IT_Refund_Amount__c.field-meta.xml
<CustomField>
    <fullName>IT_Refund_Amount__c</fullName>
    <label>Refund Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>