force-app/main/default/objects/IT_Edenred_Document__c/fields/IT_Reissue__c.field-meta.xml
<CustomField>
    <fullName>IT_Reissue__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reissue</label>
    <type>Checkbox</type>
</CustomField>