force-app/main/default/objects/IT_Edenred_Document__c/fields/IT_Status__c.field-meta.xml
<CustomField>
    <fullName>IT_Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Conforme</fullName>
            </value>
            <value>
                <fullName>Non Conforme</fullName>
            </value>
            <value>
                <fullName>Accettato</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>