force-app/main/default/objects/IT_Edenred_Document__c/fields/IT_Type__c.field-meta.xml
<CustomField>
    <fullName>IT_Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Alpha</fullName>
            </value>
            <value>
                <fullName>ODA</fullName>
            </value>
            <value>
                <fullName>RDA</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>