force-app/main/default/objects/IT_Edenred_Document__c/fields/IT_Version__c.field-meta.xml
<CustomField>
    <fullName>IT_Version__c</fullName>
    <label>Version</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>