force-app/main/default/objects/IT_Edenred_Document__c/recordTypes/IT_Consip_Document.recordType-meta.xml
<RecordType>
    <fullName>IT_Consip_Document</fullName>
    <active>true</active>
    <label>Consip Document</label>
</RecordType>