force-app/main/default/objects/IT_Edenred_Document__c/recordTypes/IT_Finance_Document.recordType-meta.xml
<RecordType>
    <fullName>IT_Finance_Document</fullName>
    <active>true</active>
    <label>Finance Document</label>
</RecordType>